fix free space on mobile, fix header overlapping by menu, fix header animation

--- a/frontend/css/filter.styl
+++ b/frontend/css/filter.styl
@@ -39,7 +39,7 @@ select-triangle-open(color)
         margin 0
         margin-bottom 12px
         font-family 'brasileiro_onemedium'
-        font-size 60px
+        font-size 5.5vw
         font-weight 100
         color $filter-h1-color
         letter-spacing 6px
@@ -192,10 +192,10 @@ select-triangle-open(color)
     margin-top 0
 
 $animationStep = 1.5%
-$active = 1%
-$back = 6%
-$active2 = 51%
-$back2 = 56%
+$active = 6%
+$back = 12%
+$active2 = 56%
+$back2 = 62%
 $animationStateDefault = translate(0, 0)
 $animationStateActive = translate(0, -15px)
 for i in 1..10
