--- a/frontend/css/footer.styl
+++ b/frontend/css/footer.styl
@@ -10,7 +10,6 @@
     filter unquote("progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#6b19ae',GradientType=1 )") /* IE6-9 fallback on horizontal gradient */
 .footer
     margin 21px auto 0
-    width 1180px
     .left
     .middle
         float left
@@ -41,7 +40,7 @@
         h1
             margin -5px 0 27px 0
             font-family champagne__limousinesregular
-            font-size 71px
+            font-size 4.5vw
             font-weight 100
             text-shadow 5px 4px 8px black
             color white
