--- a/frontend/css/global.styl
+++ b/frontend/css/global.styl
@@ -100,7 +100,6 @@ ul
     z-index 6
 
 .filter-block
-    width 1010px
     margin 0 auto
 
 .gallery-block
